--- a/src/styles.css
+++ b/src/styles.css
@@ -409,13 +409,12 @@ input[type="time"] {
     width: 100%;
     margin-left: 0;
     justify-content: flex-start;
-    display: grid;
-    grid-template-columns: minmax(0, 1fr) auto;
+    display: flex;
   }
 
   #install-app {
-    width: 100%;
-    min-width: 0;
+    width: auto;
+    max-width: min(72vw, 15rem);
   }
 
   .menu-toggle {
